syntax = "proto3";

message ReplayModel {
    bytes frames = 1;
}
